--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>UmpanHariLibur.com</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
@@ -17,22 +17,41 @@
     <a href="contact.html">Kontak</a>
   </nav>
   <div class="container">
+
+    <!-- Artikel Utama -->
     <article>
       <h2>🎣 Pengalaman Mancing Liburan di Danau Lembang</h2>
       <p>Salah satu momen terbaik saat liburan adalah bisa duduk santai sambil memancing. Di Danau Lembang, suasananya adem, tenang, dan ikannya pun cukup banyak! Saya datang pagi-pagi, membawa umpan roti dan cacing. Sekitar pukul 10 pagi, umpan saya langsung disambar ikan nila besar!</p>
     </article>
+
+    <!-- Artikel Tambahan -->
+    <article>
+      <h2>🏞️ Mancing Asik di Sungai Musi</h2>
+      <p>Hari Minggu kemarin, saya dan dua teman pergi ke Sungai Musi. Kami duduk di dermaga kayu seperti foto yang saya ambil di sana. Cuaca cerah, angin sejuk, dan air tenang. Umpan sederhana saja cukup untuk menarik ikan patin dan gabus!</p>
+    </article>
+
     <article>
       <h2>🎯 5 Umpan Air Tawar Terbaik Saat Liburan</h2>
-      <p>Kalau kamu ingin mancing di kolam atau danau, ini dia 5 umpan andalan: cacing tanah, lumut sawah, pelet vanili, roti tawar, dan jangkrik. Semua ini terbukti ampuh saat liburan kemarin. Mau resep umpan racikan sendiri? Klik link berikut <a href="#">(shortlink monetized)</a>.</p>
+      <p>Kalau kamu ingin mancing di kolam atau danau, ini dia 5 umpan andalan: cacing tanah, lumut sawah, pelet vanili, roti tawar, dan jangkrik. Mau resep umpan racikan sendiri? Klik <a href="https://exe.io/umpanracikan">link ini</a>.</p>
     </article>
+
     <article>
       <h2>🛍️ Rekomendasi Alat Mancing Murah Berkualitas</h2>
-      <p>Berikut beberapa produk yang saya pakai sendiri: <br>
-        - Reel Pancing Shimano murah: <a href="#">(link affiliate)</a><br>
-        - Joran Fiber 180cm kuat dan ringan: <a href="#">(link affiliate)</a><br>
-        - Kotak umpan mini waterproof: <a href="#">(link affiliate)</a>
+      <p>Berikut beberapa produk yang saya pakai sendiri: <br />
+        - Reel Shimano murah: <a href="https://shope.ee/XXXX">Shopee link</a><br />
+        - Joran Fiber 180cm: <a href="https://shope.ee/YYYY">Shopee link</a><br />
+        - Kotak umpan waterproof: <a href="https://tokopedia.link/ZZZZ">Tokopedia link</a>
       </p>
     </article>
+
+    <!-- Tombol Share -->
+    <div style="margin: 20px 0; text-align:center;">
+      <p>Bagikan cerita ini:</p>
+      <a href="https://wa.me/?text=https://penyelamatikantenggelam.github.io/umpanharilibur/" target="_blank">🔗 WhatsApp</a> |
+      <a href="https://t.me/share/url?url=https://penyelamatikantenggelam.github.io/umpanharilibur/" target="_blank">📢 Telegram</a> |
+      <a href="https://www.facebook.com/sharer/sharer.php?u=https://penyelamatikantenggelam.github.io/umpanharilibur/" target="_blank">📘 Facebook</a>
+    </div>
+
   </div>
   <footer>
     &copy; 2025 UmpanHariLibur.com | Cerita Liburan & Mancing
