--- a/index.html
+++ b/index.html
@@ -3,58 +3,40 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>UmpanHariLibur.com</title>
+  <title>Umpan Hari Libur Wiki</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Umpan Hari Libur</h1>
-    <p>Cerita Santai Seputar Liburan & Mancing di Alam Bebas</p>
+    <div class="logo">🎣 UmpanHariLibur Wiki</div>
+    <nav>
+      <a href="index.html">Beranda</a>
+      <a href="artikel.html">Artikel</a>
+      <a href="umpan.html">Umpan & Tips</a>
+      <a href="galeri.html">Galeri</a>
+      <a href="kontak.html">Kontak</a>
+    </nav>
   </header>
-  <nav>
-    <a href="index.html">Beranda</a>
-    <a href="about.html">Tentang</a>
-    <a href="contact.html">Kontak</a>
-  </nav>
-  <div class="container">
 
-    <!-- Artikel Utama -->
-    <article>
-      <h2>🎣 Pengalaman Mancing Liburan di Danau Lembang</h2>
-      <p>Salah satu momen terbaik saat liburan adalah bisa duduk santai sambil memancing. Di Danau Lembang, suasananya adem, tenang, dan ikannya pun cukup banyak! Saya datang pagi-pagi, membawa umpan roti dan cacing. Sekitar pukul 10 pagi, umpan saya langsung disambar ikan nila besar!</p>
-    </article>
+  <main>
+    <section class="hero">
+      <h1>Selamat Datang di UmpanHariLibur Wiki</h1>
+      <p>Temukan berbagai cerita mancing, lokasi favorit, dan racikan umpan terbaik dari para pemancing santai di akhir pekan.</p>
+    </section>
 
-    <!-- Artikel Tambahan -->
-    <article>
-      <h2>🏞️ Mancing Asik di Sungai Musi</h2>
-      <p>Hari Minggu kemarin, saya dan dua teman pergi ke Sungai Musi. Kami duduk di dermaga kayu seperti foto yang saya ambil di sana. Cuaca cerah, angin sejuk, dan air tenang. Umpan sederhana saja cukup untuk menarik ikan patin dan gabus!</p>
-    </article>
+    <section class="artikel-terbaru">
+      <h2>🧾 Artikel Terbaru</h2>
+      <ul>
+        <li><a href="artikel.html#lembang">Mancing Seru di Danau Lembang</a></li>
+        <li><a href="artikel.html#musi">Sungai Musi: Spot Gabus dan Patin</a></li>
+        <li><a href="umpan.html#racikan">Racikan Umpan Air Tawar 2025</a></li>
+        <li><a href="galeri.html">📸 Galeri Pemancing</a></li>
+      </ul>
+    </section>
+  </main>
 
-    <article>
-      <h2>🎯 5 Umpan Air Tawar Terbaik Saat Liburan</h2>
-      <p>Kalau kamu ingin mancing di kolam atau danau, ini dia 5 umpan andalan: cacing tanah, lumut sawah, pelet vanili, roti tawar, dan jangkrik. Mau resep umpan racikan sendiri? Klik <a href="https://exe.io/umpanracikan">link ini</a>.</p>
-    </article>
-
-    <article>
-      <h2>🛍️ Rekomendasi Alat Mancing Murah Berkualitas</h2>
-      <p>Berikut beberapa produk yang saya pakai sendiri: <br />
-        - Reel Shimano murah: <a href="https://shope.ee/XXXX">Shopee link</a><br />
-        - Joran Fiber 180cm: <a href="https://shope.ee/YYYY">Shopee link</a><br />
-        - Kotak umpan waterproof: <a href="https://tokopedia.link/ZZZZ">Tokopedia link</a>
-      </p>
-    </article>
-
-    <!-- Tombol Share -->
-    <div style="margin: 20px 0; text-align:center;">
-      <p>Bagikan cerita ini:</p>
-      <a href="https://wa.me/?text=https://penyelamatikantenggelam.github.io/umpanharilibur/" target="_blank">🔗 WhatsApp</a> |
-      <a href="https://t.me/share/url?url=https://penyelamatikantenggelam.github.io/umpanharilibur/" target="_blank">📢 Telegram</a> |
-      <a href="https://www.facebook.com/sharer/sharer.php?u=https://penyelamatikantenggelam.github.io/umpanharilibur/" target="_blank">📘 Facebook</a>
-    </div>
-
-  </div>
   <footer>
-    &copy; 2025 UmpanHariLibur.com | Cerita Liburan & Mancing
+    <p>&copy; 2025 UmpanHariLibur.com | Wiki Mancing & Liburan</p>
   </footer>
 </body>
 </html>
